Bug: Prevent carousel from jumping (#674)
* Prevent carousel from jumping, on smaller viewports (<967), when switching variants

--- a/styles/product-page/components/product-carousel.scss
+++ b/styles/product-page/components/product-carousel.scss
@@ -84,11 +84,13 @@
   overflow: hidden;
 }
 
-.de-CarouselFeature {
-  .slick-slide {
-    position: relative;
-    padding-right: 2px;
-    right: -1px;
+@media (min-width: $breakpoint-md) {
+  .de-CarouselFeature {
+    .slick-slide {
+      position: relative;
+      padding-right: 2px;
+      right: -1px;
+    }
   }
 }
 
